tests/ui/parser/issues/issue-65122-mac-invoc-in-mut-patterns.stderr
error: `mut` must be followed by a named binding
  --> $DIR/issue-65122-mac-invoc-in-mut-patterns.rs:6:13
   |
LL |         let mut $eval = ();
   |             ^^^^
...
LL |     mac1! { does_not_exist!() }
   |     --------------------------- in this macro invocation
   |
   = note: `mut` may be followed by `variable` and `variable @ pattern`
   = note: this error originates in the macro `mac1` (in Nightly builds, run with -Z macro-backtrace for more info)
help: remove the `mut` prefix
   |
LL -         let mut $eval = ();
LL +         let $eval = ();
   |

error: expected identifier, found metavariable
  --> $DIR/issue-65122-mac-invoc-in-mut-patterns.rs:13:17
   |
LL |         let mut $eval = ();
   |                 ^^^^^ expected identifier, found metavariable
...
LL |     mac2! { does_not_exist!() }
   |     --------------------------- in this macro invocation
   |
   = note: this error originates in the macro `mac2` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `mut` must be followed by a named binding
  --> $DIR/issue-65122-mac-invoc-in-mut-patterns.rs:13:13
   |
LL |         let mut $eval = ();
   |             ^^^^
...
LL |     mac2! { does_not_exist!() }
   |     --------------------------- in this macro invocation
   |
   = note: `mut` may be followed by `variable` and `variable @ pattern`
   = note: this error originates in the macro `mac2` (in Nightly builds, run with -Z macro-backtrace for more info)
help: remove the `mut` prefix
   |
LL -         let mut $eval = ();
LL +         let $eval = ();
   |

error: cannot find macro `does_not_exist` in this scope
  --> $DIR/issue-65122-mac-invoc-in-mut-patterns.rs:22:13
   |
LL |     mac2! { does_not_exist!() }
   |             ^^^^^^^^^^^^^^

error: cannot find macro `does_not_exist` in this scope
  --> $DIR/issue-65122-mac-invoc-in-mut-patterns.rs:20:13
   |
LL |     mac1! { does_not_exist!() }
   |             ^^^^^^^^^^^^^^

error: aborting due to 5 previous errors

